# rust_microservice

./: Cargo.toml  README.md
src/: error.rs  main.rs
src/handlers/: mod.rs
src/payloads/: mod.rs
