[package]
name = "rust_microservice"
version = "0.1.0"
edition = "2021"
description = "Template for a Rust based Microservice using Actix-web"

[features]
opentel = []

[dependencies]
actix-web = "4.5.1"
env_logger = "0.11.3"
log = "0.4.21"
serde = { version = "1.0.197", features = ["derive"]}
serde_json = "1.0.115"
